# convertisseur-iramuteq

./: README.md  pyproject.toml
tests/: test_convertisseur_iramuteq.py
