[tool.poetry]
name = "convertisseur-iramuteq"
version = "0.1.0"
description = "Convertisseur et formatage des corpus texte pour Iramuteq."
authors = ["Jérémy DEMANGE <jeremy@scrapfast.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
